outside div add togle with ajax

--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -96,12 +96,12 @@
                         </div>
                     </div>
                 </div>
-                <div style="/* display: none; *//* margin-left: -36px; */top: -111px;position: relative;">
+                <div style="margin-left: -36px; top: -111px;position: relative;">
                     <h1> outside div</h1>
-                    <span id="region_display_auto">Derived waiting time of trust AUT with its underlying region
+                    <span style="display: none" id="region_display_auto">Derived waiting time of trust AUT with its underlying region
                         R1</span>
                     
-                    <div id="region_display_auto_div">Derived waiting time of trust AUT </div>
+                    <div id="region_display_auto_div" style="display: none">Derived waiting time of trust AUT </div>
                     
                 </div>
                 <div id="dv_chart_row_panel" class="row" style="display: none">
