--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -96,32 +96,33 @@
                         </div>
                     </div>
                 </div>
+                 <!-- start test case for automation-->
+               <!--
                 <div style="margin-left: -36px; top: -111px;position: relative;">
                     <h1> outside div</h1>
-                    <span style="visibility: hidden;" id="region_display_auto">Derived waiting time of trust AUT with its underlying region
+                    <span style="display: none;" id="region_display_auto">Derived waiting time of trust AUT with its underlying region
                         R1</span>
-                    
-                    <div id="region_display_auto_div" style="visibility: hidden;">Derived waiting time of trust AUT </div>
-                    
+                    <div id="region_display_auto_div" style="display: none;">Derived waiting time of trust AUT </div>
                 </div>
-                <div id="dv_chart_row_panel" class="row" style="display: none">
+               --> 
+               <!-- end test case for automation-->
+                <div id="dv_chart_row_panel" class="row" style="display: blcok">
                     <div class="col-sm-10">
                         <div id="loaderbg">
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
                             </div>
                         </div>
-
+                        
                         <div id="region_nd_other" style="display: block; margin-top: -107px;">
-                            <h4 style="margin-left: 111px;"><i><b> <span id="region_display"></span></b></i></h4>
-                            <span id="region_display_auto_InsideAjax" style="visibility: hidden;">Derived waiting time of trust AUT with its
-                                underlying region R1</span>
-                            
-                            <div id="region_display_auto_div_InsideAjax" style="visibility: hidden;">Derived waiting time of trust AUT </div>
-                            
-                        </div>
-                        <!-- start test case for automation-->
-
-                        <!-- end test case for automation-->
+                                <h4 style="margin-left: 111px;"><i><b> <span id="region_display"></span></b></i></h4>
+                                <!-- start test case for automation-->
+                                <!--<span id="region_display_auto_InsideAjax" style="visibility: hidden;">Derived waiting time of trust AUT with its
+                                    underlying region R1</span>
+                                
+                                <div id="region_display_auto_div_InsideAjax" style="visibility: hidden;">Derived waiting time of trust AUT </div>
+                                --> <!-- end test case for automation-->
+                            </div> 
+                        
                         <div class="HomePageMenuList">
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
